Projet GL/Projet_GL/src/test/deca/context/invalid/increment6/bad-affectation-method.deca
// Test bad affectation method type

// Historique : cree le 21/01/2023

class A{
    protected int x;

    int getX(){
        return x;
    }
}

{
    A a = new A();

    // Must be refused
    boolean b = a.getX();
}